--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
+<!--
+    Author: Neha Sharma
+ -->
 <resources>
     <string name="app_name">SoccerShotRecorder</string>
+    <string name="my_team_name">Team1</string>
+    <string name="team_names"></string>
+    <string name="opp_team_name">Team2</string>
+    <string name="zero">0</string>
+    <string-array name="half_spinner_array">
+        <item>First Half</item>
+        <item>Second Half</item>
+    </string-array>
 </resources>
